CHanges for proxy

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -5,8 +5,8 @@
   <div style="position:relative;">
   <div style="width: 50% ;display:left">
     <h2 style="padding-bottom:15px;text-align:center">Add Axis Payee</h2>
-    <div *ngIf="clickMessage">
-    <h2 style="padding-bottom:15px;text-align:center;color:purple"></h2>
+    <div *ngIf="confirmAdding">
+    <h2 style="padding-bottom:15px;text-align:center;color:purple">Beneficiary Added !!!</h2>
   </div>
   </div>
  
