--- a/src/app/common/common.component.html
+++ b/src/app/common/common.component.html
@@ -13,8 +13,8 @@
     <ul>
        <li><a [routerLink]="['/user/',loggeduser.customer_id]" routerLinkActive="active">Axis Bank Account</a></li>
        <li><a [routerLink]="['/nonuser/',loggeduser.customer_id]" routerLinkActive="active">Add Non Axis Bank Account</a></li>
-      <!-- <li><a [routerLink]="['/upid/',loggeduser.customer_id]" routerLinkActive="active">UPI ID</a></li>-->
        <li><a [routerLink]="['/others/',loggeduser.customer_id]" routerLinkActive="active">Others</a></li>
+     <li><a [routerLink]="['/search/',loggeduser.customer_id]" routerLinkActive="active">Search</a></li>
     </ul>
     </div>
     
